--- a/index.html
+++ b/index.html
@@ -229,51 +229,34 @@ MAIN
                 </div>
 
             </div>
-            <!-- <div class="col-md-4 pl-4">
+
+            <div class="col-md-4 pl-4">
                 <h5 class="font-weight-bold spanborder"><span>Popular</span></h5>
                 <ol class="list-featured">
                     <li>
                         <span>
 				<h6 class="font-weight-bold">
-				<a href="./article.html" class="text-dark">Did Supernovae Kill Off Large Ocean Animals?</a>
+				<a href="./flutter-3.13-features.html" class="text-dark">What’s new in Flutter 3.13?</a>
 				</h6>
 				<p class="text-muted">
-					Jake Bittle in SCIENCE
+					LogicBolts in Technology
 				</p>
 				</span>
                     </li>
                     <li>
                         <span>
 				<h6 class="font-weight-bold">
-				<a href="./article.html" class="text-dark">Humans Reversing Climate Clock: 50 Million Years</a>
+				<a href="./what-is-quantum-computing.html" class="text-dark">Quantum Computing: Unleashing the Power of the Quantum World</a>
 				</h6>
 				<p class="text-muted">
-					Jake Bittle in SCIENCE
+					LogicBolts in Technology
 				</p>
 				</span>
                     </li>
-                    <li>
-                        <span>
-				<h6 class="font-weight-bold">
-				<a href="./article.html" class="text-dark">Unprecedented Views of the Birth of Planets</a>
-				</h6>
-				<p class="text-muted">
-					Jake Bittle in SCIENCE
-				</p>
-				</span>
-                    </li>
-                    <li>
-                        <span>
-				<h6 class="font-weight-bold">
-				<a href="./article.html" class="text-dark">Effective New Target for Mood-Boosting Brain Stimulation Found</a>
-				</h6>
-				<p class="text-muted">
-					Jake Bittle in SCIENCE
-				</p>
-				</span>
-                    </li>
+
                 </ol>
-            </div> -->
+            </div>
+
         </div>
     </div>
 
