new blog web 3.0 added

--- a/index.html
+++ b/index.html
@@ -75,13 +75,14 @@ HEADER
             <div class="pl-4 pr-0 h-100 tofront">
                 <div class="row justify-content-between">
                     <div class="col-md-6 pt-6 pb-6 align-self-center">
-                        <h1 class="secondfont mb-3 font-weight-bold">What’s new in Flutter 3.13</h1>
+                        <h1 class="secondfont mb-3 font-weight-bold">What is Web 3.0?</h1>
                         <p class="mb-3">
-                            2D scrolling, faster graphics, New Material You design system, Improved performance, New features for web development, New widgets and APIs and more
+                            Web3.0 is the third generation of the internet, which is built on decentralized technologies, such as blockchain. It is often referred to as the "decentralized web" because it gives users more control over their data and privacy, and applications are
+                            not controlled by a single entity. </p>
                         </p>
-                        <a href="./flutter-3.13-features.html" class="btn btn-dark">Read More</a>
+                        <a href="./web3.0.html" class="btn btn-dark">Read More</a>
                     </div>
-                    <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url(./assets/img/flutter-3.13/flutter-square-logo.jpg);"> </div>
+                    <div class="col-md-6 d-none d-md-block pr-0" style="background-size:cover;background-image:url(./assets/img/web3.0/web3.0-square.jpg);"> </div>
                 </div>
             </div>
         </div>
@@ -98,15 +99,15 @@ MAIN
 
             <div class="col-lg-6">
                 <div class="card border-0 mb-4 box-shadow h-xl-300">
-                    <div style="background-image: url(./assets/img/quantum-computing/quantum-computer-history-widescreen.webp); height: 200px;    background-size: cover;    background-repeat: no-repeat;"></div>
+                    <div style="background-image: url(./assets/img/flutter-3.13/flutter-square-logo.jpg); height: 200px;    background-size: cover;    background-repeat: no-repeat;"></div>
                     <div class="card-body px-0 pb-0 d-flex flex-column align-items-start">
                         <h2 class="h4 font-weight-bold">
-                            <a class="text-dark" href="./what-is-quantum-computing.html">Quantum Computing: Unleashing the Power of the Quantum World</a>
+                            <a class="text-dark" href="./flutter-3.13-features.html">What’s new in Flutter 3.13</a>
                         </h2>
                         <p class="card-text">
-                            Quantum computing, a revolutionary frontier in technology, promises to reshape the very foundations of computation...
-                            <small class="d-block"><a class="text-muted" href="./ios17-features.html">LogicBolts</a></small>
-                            <small class="text-muted">Aug 14 &middot; 30 min read</small>
+                            2D scrolling, faster graphics, New Material You design system, Improved performance, New features for web development, New widgets and APIs and more
+                            <small class="d-block"><a class="text-muted" href="https://www.logicbolts.com" target="_blank">LogicBolts</a></small>
+                            <small class="text-muted">Aug 25 &middot; 20 min read</small>
                     </div>
                 </div>
             </div>
