web3.0 blog assets updated

--- a/web3.0.html
+++ b/web3.0.html
@@ -254,8 +254,12 @@ MAIN
                             </ul>
                             <p>Web3.0 is still in its early stages of development, but it has the potential to change the way we use the internet. It is a promising technology with the potential to make the web more decentralized, secure, and transparent.</p>
 
-
                         </p>
+
+                        <br/>
+                        <div class="center-image"><img src="./assets/img/web3.0/web3.0-network.gif" width="90%" height="90%" /></div>
+
+
                     </section>
 
 
@@ -294,6 +298,11 @@ MAIN
 
 
                         </p>
+
+                        <br/>
+                        <div class="center-image"><img src="./assets/img/web3.0/web3.0-blockchain.gif" width="90%" height="90%" /></div>
+
+
                     </section>
 
 
@@ -382,6 +391,9 @@ MAIN
                             <p>These are just a few examples of how Web3.0 is being used to improve user control and privacy. As the technology continues to develop, we can expect to see even more innovative ways to protect user data and privacy.</p>
 
                         </p>
+                        <br/>
+                        <div class="center-image"><img src="./assets/img/web3.0/web3.0-security.gif" width="90%" height="90%" /></div>
+
                     </section>
 
 
@@ -485,7 +497,7 @@ MAIN
                         </p>
 
                         <br/>
-                        <div class="center-image"><img src="./assets/img/flutter-3.13/cool.gif" width="90%" height="90%" /></div>
+                        <div class="center-image"><img src="./assets/img/web3.0/web3.0-money-flow.gif" width="90%" height="90%" /></div>
 
                     </section>
 
@@ -564,7 +576,7 @@ MAIN
 
                         </p>
                         <br/>
-                        <div class="center-image"><img src="./assets/img/flutter-3.13/new-painting-system.gif" width="90%" height="90%" /></div>
+                        <div class="center-image"><img src="./assets/img/web3.0/web3.0-frustrated.gif" width="90%" height="90%" /></div>
 
                     </section>
 
@@ -611,7 +623,7 @@ MAIN
                         </p>
 
                         <br/>
-                        <div class="center-image"><img src="./assets/img/flutter-3.13/new-web-engine.gif" width="60%" height="60%" /></div>
+                        <div class="center-image"><img src="./assets/img/web3.0/web3.0-hacker.gif" width="60%" height="60%" /></div>
 
                     </section>
 
@@ -724,7 +736,7 @@ MAIN
                         </p>
 
                         <br/>
-                        <div class="center-image"><img src="./assets/img/flutter-3.13/new-web-deployment.gif" width="60%" height="60%" /></div>
+                        <div class="center-image"><img src="./assets/img/web3.0/web3.0-people.gif" width="60%" height="60%" /></div>
 
 
                     </section>
