menu added with contact us page and fixed some a tag issues

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ NAVBAR
             <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
 	<span class="navbar-toggler-icon"></span>
 	</button>
-            <!-- <div class="navbar-collapse collapse" id="navbarColor02" >
-                <ul class="navbar-nav mr-auto d-flex align-items-center">
+            <div class="navbar-collapse collapse" id="navbarColor02">
+                <!-- <ul class="navbar-nav mr-auto d-flex align-items-center">
                     <li class="nav-item">
                         <a class="nav-link" href="./index.html">Intro <span class="sr-only">(current)</span></a>
                     </li>
@@ -55,13 +55,13 @@ NAVBAR
                     <li class="nav-item">
                         <a class="nav-link" href="./docs.html">Template <span class="badge badge-secondary">docs</span></a>
                     </li>
-                </ul>
+                </ul> -->
                 <ul class="navbar-nav ml-auto d-flex align-items-center">
                     <li class="nav-item highlight">
-                        <a class="nav-link" href="https://www.wowthemes.net/mundana-free-html-bootstrap-template/">Get this Theme</a>
+                        <a class="nav-link" href="https://www.logicbolts.com/" target="_blank">Contact Us</a>
                     </li>
                 </ul>
-            </div> -->
+            </div>
         </div>
     </nav>
     <!-- End Navbar -->
