--- a/web3.html
+++ b/web3.html
@@ -31,47 +31,47 @@
     <!--------------------------------------
 NAVBAR
 --------------------------------------->
-    <!-- <nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
-<div class="container">
-	<a class="navbar-brand" href="./index.html"><strong>Mundana</strong></a>
-	<button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
-	<span class="navbar-toggler-icon"></span>
-	</button>
-	<div class="navbar-collapse collapse" id="navbarColor02" style="">
-		<ul class="navbar-nav mr-auto d-flex align-items-center">
-			<li class="nav-item">
-			<a class="nav-link" href="./index.html">Intro <span class="sr-only">(current)</span></a>
-			</li>
-			<li class="nav-item">
-			<a class="nav-link" href="./article.html">Culture</a>
-			</li>
-			<li class="nav-item">
-			<a class="nav-link" href="./article.html">Tech</a>
-			</li>
-			<li class="nav-item">
-			<a class="nav-link" href="./article.html">Politics</a>
-			</li>
-			<li class="nav-item">
-			<a class="nav-link" href="./article.html">Health</a>
-			</li>
-			<li class="nav-item">
-			<a class="nav-link" href="./article.html">Collections</a>
-			</li>
-			<li class="nav-item">
-			<a class="nav-link" href="./about.html">About</a>
-			</li>
-			<li class="nav-item">
-			<a class="nav-link" href="./docs.html">Template <span class="badge badge-secondary">docs</span></a>
-			</li>
-		</ul>
-		<ul class="navbar-nav ml-auto d-flex align-items-center">
-			<li class="nav-item highlight">
-			<a class="nav-link" href="https://www.wowthemes.net/mundana-free-html-bootstrap-template/">Get this Theme</a>
-			</li>
-		</ul>
-	</div>
-</div>
-</nav> -->
+    <nav class="topnav navbar navbar-expand-lg navbar-light bg-white fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="./index.html"><strong>Blogs</strong></a>
+            <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+<span class="navbar-toggler-icon"></span>
+</button>
+            <div class="navbar-collapse collapse" id="navbarColor02">
+                <!-- <ul class="navbar-nav mr-auto d-flex align-items-center">
+                <li class="nav-item">
+                    <a class="nav-link" href="./index.html">Intro <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./article.html">Culture</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./article.html">Tech</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./article.html">Politics</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./article.html">Health</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./article.html">Collections</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./about.html">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="./docs.html">Template <span class="badge badge-secondary">docs</span></a>
+                </li>
+            </ul> -->
+                <ul class="navbar-nav ml-auto d-flex align-items-center">
+                    <li class="nav-item highlight">
+                        <a class="nav-link" href="https://www.logicbolts.com/" target="_blank">Contact Us</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
     <!-- End Navbar -->
 
     <!--------------------------------------
@@ -883,7 +883,7 @@ FOOTER
         <footer class="bg-white border-top p-3 text-muted small">
             <div class="row align-items-center justify-content-between">
                 <div>
-                    <span class="navbar-brand mr-2"><strong>LogicBolts</strong></span> Copyright &copy;
+                    <span class="navbar-brand mr-2"><strong><a href="https://www.logicbolts.com" target="_blank">LogicBolts</a></strong></span> Copyright &copy;
                     <script>
                         document.write(new Date().getFullYear())
                     </script>
@@ -910,53 +910,9 @@ JAVASCRIPTS
     <script src="./assets/js/vendor/popper.min.js" type="text/javascript"></script>
     <script src="./assets/js/vendor/bootstrap.min.js" type="text/javascript"></script>
     <script src="./assets/js/functions.js" type="text/javascript"></script>
-    <script>
-        // JavaScript to handle smooth scrolling on link click
-        const links = document.querySelectorAll('a');
-        links.forEach(link => {
-            link.addEventListener('click', (event) => {
-                event.preventDefault(); // Prevent default anchor behavior
-                const targetId = link.getAttribute('href'); // Get the target section ID
-                const targetSection = document.querySelector(targetId); // Find the target section
-                if (targetSection) {
-                    targetSection.scrollIntoView({
-                        behavior: 'smooth' // Use smooth scrolling
-                    });
-                }
-            });
-        });
-    </script>
+    <script src="./assets/js/customscrolling.js" type="text/javascript"></script>
 
-    <script>
-        function scrollToElement() {
 
-            const targetElement = document.getElementById('scrollTarget');
-            if (targetElement) {
-
-                targetElement.scrollIntoView({
-                    behavior: 'smooth'
-                });
-
-            }
-        }
-    </script>
-
-    <script>
-        var targetElement = document.getElementById("scrollTarget");
-        var hiddenElement = document.getElementById("hiddenElement");
-
-        // Add a scroll event listener
-        window.addEventListener("scroll", function() {
-            var targetPosition = targetElement.getBoundingClientRect();
-
-            // Check if the top of the target element is visible in the viewport
-            if (targetPosition.top >= 0) {
-                hiddenElement.style.display = "none"; // Show the element
-            } else {
-                hiddenElement.style.display = "block"; // Hide the element
-            }
-        });
-    </script>
 
 </body>
 
