missing files and chages added

--- a/gamestoolshub/financialtools/toolsindex.html
+++ b/gamestoolshub/financialtools/toolsindex.html
@@ -235,7 +235,7 @@
                 </div>
                 <h2 class="tool-name">Compound Interest Calculator</h2>
                 <p class="tool-subtitle">Helps calculate interest earned on investments over time</p>
-                <a href="financialtools/cic_tool.html">
+                <a href="cic_tool.html">
                     <button class="tool-button">Explore Now</button></a>
             </div>
 
@@ -246,7 +246,7 @@
                 </div>
                 <h2 class="tool-name">Stock Profit & Loss Calculator </h2>
                 <p class="tool-subtitle">Determines profit/loss from stock trading</p>
-                <a href="financialtools/stockprofitlosscacl.html"> <button class="tool-button">Explore Now</button></a>
+                <a href="stockprofitlosscacl.html"> <button class="tool-button">Explore Now</button></a>
             </div>
 
             <!-- Tool Card 3 -->
@@ -256,7 +256,7 @@
                 </div>
                 <h2 class="tool-name">Dividend Yield Calculator</h2>
                 <p class="tool-subtitle">Computes the dividend income from stocks</p>
-                <a href="financialtools/dividentyieldcalc.html"><button class="tool-button">Explore Now</button></a>
+                <a href="dividentyieldcalc.html"><button class="tool-button">Explore Now</button></a>
             </div>
 
             <!-- Tool Card 4 -->
