--- a/gamestoolshub/index.html
+++ b/gamestoolshub/index.html
@@ -191,7 +191,7 @@
                 <div class="game-info">
                     <h2 class="game-title">Flappy Bird</h2>
                     <p class="game-desc">Exciting action-packed adventure game</p>
-                    <a href="flappybird.html" class="play-btn">Play Now</a>
+                    <a href="./games/flappybird.html" class="play-btn">Play Now</a>
                 </div>
             </div>
 
@@ -200,7 +200,7 @@
                 <div class="game-info">
                     <h2 class="game-title">Puzzle Master 2048</h2>
                     <p class="game-desc">Challenging mind-bending puzzles</p>
-                    <a href="2048_games.html" class="play-btn">Play Now</a>
+                    <a href="./games/2048_games.html" class="play-btn">Play Now</a>
                 </div>
             </div>
 
@@ -218,7 +218,7 @@
                 <div class="game-info">
                     <h2 class="game-title">Strategy King</h2>
                     <p class="game-desc">Test your strategic skills</p>
-                    <a href="strategyking.html" class="play-btn">Play Now</a>
+                    <a href="./games/strategyking.html" class="play-btn">Play Now</a>
                 </div>
             </div>
 
@@ -227,7 +227,7 @@
                 <div class="game-info">
                     <h2 class="game-title">Lumosity Puzzle</h2>
                     <p class="game-desc">Test your strategic skills</p>
-                    <a href="lumosity_puzzle.html" class="play-btn">Play Now</a>
+                    <a href="./games/lumosity_puzzle.html" class="play-btn">Play Now</a>
                 </div>
             </div>
 
@@ -236,7 +236,7 @@
                 <div class="game-info">
                     <h2 class="game-title">Elevate Puzzle</h2>
                     <p class="game-desc">Test your strategic skills</p>
-                    <a href="elevate_puzzle.html" class="play-btn">Play Now</a>
+                    <a href="./games/elevate_puzzle.html" class="play-btn">Play Now</a>
                 </div>
             </div>
         </section>
