--- a/index.html
+++ b/index.html
@@ -30,20 +30,15 @@ NAVBAR
 	<span class="navbar-toggler-icon"></span>
 	</button>
             <div class="navbar-collapse collapse" id="navbarColor02">
-                <!-- <ul class="navbar-nav mr-auto d-flex align-items-center">
+                <ul class="navbar-nav mr-auto d-flex align-items-center">
+
                     <li class="nav-item">
-                        <a class="nav-link" href="./index.html">Intro <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="./gamestoolshub/index.html"><strong>Games</strong></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./article.html">Culture</a>
+                        <a class="nav-link" href="./gamestoolshub/financialtools/toolsindex.html"><strong>Tools</strong></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./article.html">Tech</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="./article.html">Politics</a>
-                    </li>
-                    <li class="nav-item">
+                    <!-- <li class="nav-item">
                         <a class="nav-link" href="./article.html">Health</a>
                     </li>
                     <li class="nav-item">
@@ -54,8 +49,8 @@ NAVBAR
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./docs.html">Template <span class="badge badge-secondary">docs</span></a>
-                    </li>
-                </ul> -->
+                    </li> -->
+                </ul>
                 <ul class="navbar-nav ml-auto d-flex align-items-center">
                     <li class="nav-item highlight">
                         <a class="nav-link" href="https://www.logicbolts.com/" target="_blank">Contact Us</a>
