links added in popular section

--- a/index.html
+++ b/index.html
@@ -250,6 +250,30 @@ MAIN
 				</span>
                     </li>
 
+                    <li>
+                        <span>
+				<h6 class="font-weight-bold">
+				<a href="./gamestoolshub/index.html" class="text-dark">Games Hub – Your Ultimate Online Gaming Destination! 🎮🔥</a>
+				</h6>
+				<p class="text-muted">
+					Games Hub
+				</p>
+				</span>
+                    </li>
+
+
+                    <li>
+                        <span>
+				<h6 class="font-weight-bold">
+				<a href="./gamestoolshub/financialtools/toolsindex.html" class="text-dark">Discover our collection of intelligent solutions</a>
+				</h6>
+				<p class="text-muted">
+					Calculators
+				</p>
+				</span>
+                    </li>
+
+
                 </ol>
             </div>
 
